add tests for composite element handling and SVG generation: introduce unit tests for CHOICE/SEQUENCE/ALL elements to validate filtering in HTML generation and recursive SVG creation; ensure detailed coverage of compositor structures and child element flattening logic; enhance `XsdDocumentationHtmlService` to exclude container elements in detail pages